crates/oxc_linter/src/snapshots/oxc_only_used_in_recursion.snap
---
source: crates/oxc_linter/src/tester.rs
---

  ⚠ oxc(only-used-in-recursion): Parameter `arg0` is only used in recursive calls
   ╭─[only_used_in_recursion.tsx:2:27]
 1 │ 
 2 │             function test(arg0) {
   ·                           ────
 3 │                 return test(arg0);
   ╰────
  help: Remove the argument and its usage. Alternatively, use the argument in the function body.

  ⚠ oxc(only-used-in-recursion): Parameter `arg1` is only used in recursive calls
   ╭─[only_used_in_recursion.tsx:2:33]
 1 │ 
 2 │             function test(arg0, arg1) {
   ·                                 ────
 3 │                 return test("", arg1);
   ╰────
  help: Remove the argument and its usage. Alternatively, use the argument in the function body.

  ⚠ oxc(only-used-in-recursion): Parameter `arg0` is only used in recursive calls
   ╭─[only_used_in_recursion.tsx:2:27]
 1 │ 
 2 │             function test(arg0) {
   ·                           ────
 3 │                 test(arg0);
   ╰────
  help: Remove the argument and its usage. Alternatively, use the argument in the function body.

  ⚠ oxc(only-used-in-recursion): Parameter `arg0` is only used in recursive calls
   ╭─[only_used_in_recursion.tsx:2:27]
 1 │ 
 2 │             function test(arg0, arg1) {
   ·                           ────
 3 │                 test(arg0);
   ╰────
  help: Remove the argument and its usage. Alternatively, use the argument in the function body.

  ⚠ oxc(only-used-in-recursion): Parameter `a` is only used in recursive calls
   ╭─[only_used_in_recursion.tsx:2:44]
 1 │ 
 2 │             module.exports = function test(a) {
   ·                                            ─
 3 │                 test(a)
   ╰────
  help: Remove the argument and its usage. Alternatively, use the argument in the function body.

  ⚠ oxc(only-used-in-recursion): Parameter `a` is only used in recursive calls
   ╭─[only_used_in_recursion.tsx:2:34]
 1 │ 
 2 │             export function test(a) {
   ·                                  ─
 3 │                 test(a)
   ╰────
  help: Remove the argument and its usage. Alternatively, use the argument in the function body.

  ⚠ oxc(only-used-in-recursion): Parameter `arg0` is only used in recursive calls
   ╭─[only_used_in_recursion.tsx:2:24]
 1 │ 
 2 │             const a = (arg0) => {
   ·                        ────
 3 │                 return a(arg0);
   ╰────
  help: Remove the argument and its usage. Alternatively, use the argument in the function body.

  ⚠ oxc(only-used-in-recursion): Parameter `callac` is only used in recursive calls
   ╭─[only_used_in_recursion.tsx:2:24]
 1 │ //¿
 2 │ function writeChunks(a,callac){writeChunks(m,callac)}writeChunks(i,{})
   ·                        ──────
   ╰────
  help: Remove the argument and its usage. Alternatively, use the argument in the function body.

  ⚠ oxc(only-used-in-recursion): Parameter `depth` is only used in recursive calls
   ╭─[only_used_in_recursion.tsx:2:33]
 1 │ 
 2 │             function ListItem({ depth }) {
   ·                                 ─────
 3 │                 return <ListItem depth={depth} />
   ╰────
  help: Remove the argument and its usage. Alternatively, use the argument in the function body.

  ⚠ oxc(only-used-in-recursion): Parameter `depth` is only used in recursive calls
   ╭─[only_used_in_recursion.tsx:2:33]
 1 │ 
 2 │             function ListItem({ depth: listDepth }) {
   ·                                 ────────────────
 3 │                 return <ListItem depth={listDepth} />;
   ╰────
  help: Remove the argument and its usage. Alternatively, use the argument in the function body.

  ⚠ oxc(only-used-in-recursion): Parameter `depth` is only used in recursive calls
   ╭─[only_used_in_recursion.tsx:2:32]
 1 │ 
 2 │             function ListItem({depth = 0}) {
   ·                                ─────────
 3 │                 return <ListItem depth={depth} />
   ╰────
  help: Remove the argument and its usage. Alternatively, use the argument in the function body.

  ⚠ oxc(only-used-in-recursion): Parameter `depth` is only used in recursive calls
   ╭─[only_used_in_recursion.tsx:2:32]
 1 │ 
 2 │             function ListItem({depth, ...otherProps}) {
   ·                                ─────
 3 │                             return <ListItem depth={depth} />
   ╰────
  help: Remove the argument and its usage. Alternatively, use the argument in the function body.

  ⚠ oxc(only-used-in-recursion): Parameter `a` is only used in recursive calls
   ╭─[only_used_in_recursion.tsx:2:28]
 1 │ 
 2 │             function Test({a, b}) {
   ·                            ─
 3 │                 return (
   ╰────
  help: Remove the argument and its usage. Alternatively, use the argument in the function body.

  ⚠ oxc(only-used-in-recursion): Parameter `b` is only used in recursive calls
   ╭─[only_used_in_recursion.tsx:2:31]
 1 │ 
 2 │             function Test({a, b}) {
   ·                               ─
 3 │                 return (
   ╰────
  help: Remove the argument and its usage. Alternatively, use the argument in the function body.
