crates/oxc_linter/src/snapshots/oxc_package_json_no_duplicate_dependencies.snap
---
source: crates/oxc_linter/src/tester.rs
assertion_line: 444
---

  ⚠ oxc(package-json-no-duplicate-dependencies): `lodash` is listed in both `dependencies` and `devDependencies`.
   ╭─[/Users/alexeylyakhov/projects/oxc/crates/oxc_linter/fixtures/import/package.json:1:57]
 1 │ {"dependencies":{"lodash":"^4.17.0"},"devDependencies":{"lodash":"^4.17.0"}}
   ·                                                         ────────
   ╰────
  help: Remove the package from one of the dependency groups.

  ⚠ oxc(package-json-no-duplicate-dependencies): `lodash` is listed in both `dependencies` and `devDependencies`.
   ╭─[/Users/alexeylyakhov/projects/oxc/crates/oxc_linter/fixtures/import/package.json:1:75]
 1 │ {"dependencies":{"lodash":"^4.17.0","react":"^18.0.0"},"devDependencies":{"lodash":"^4.17.0","vitest":"^1.0.0"}}
   ·                                                                           ────────
   ╰────
  help: Remove the package from one of the dependency groups.
