crates/oxc_linter/src/snapshots/oxc_package_json_no_empty_fields.snap
---
source: crates/oxc_linter/src/tester.rs
---

  ⚠ oxc(package-json-no-empty-fields): The `keywords` field in package.json should not be an empty array.
   ╭─[/Users/alexeylyakhov/projects/oxc/crates/oxc_linter/fixtures/import/package.json:1:13]
 1 │ {"keywords":[]}
   ·             ──
   ╰────
  help: Remove empty package.json fields that do not carry any information.

  ⚠ oxc(package-json-no-empty-fields): The `publishConfig` field in package.json should not be an empty object.
   ╭─[/Users/alexeylyakhov/projects/oxc/crates/oxc_linter/fixtures/import/package.json:1:18]
 1 │ {"publishConfig":{}}
   ·                  ──
   ╰────
  help: Remove empty package.json fields that do not carry any information.

  ⚠ oxc(package-json-no-empty-fields): The `files` field in package.json should not be an empty array.
   ╭─[/Users/alexeylyakhov/projects/oxc/crates/oxc_linter/fixtures/import/package.json:1:10]
 1 │ {"files":[],"scripts":{}}
   ·          ──
   ╰────
  help: Remove empty package.json fields that do not carry any information.

  ⚠ oxc(package-json-no-empty-fields): The `scripts` field in package.json should not be an empty object.
   ╭─[/Users/alexeylyakhov/projects/oxc/crates/oxc_linter/fixtures/import/package.json:1:23]
 1 │ {"files":[],"scripts":{}}
   ·                       ──
   ╰────
  help: Remove empty package.json fields that do not carry any information.

  ⚠ oxc(package-json-no-empty-fields): The `keywords` field in package.json should not be an empty array.
   ╭─[/Users/alexeylyakhov/projects/oxc/crates/oxc_linter/fixtures/import/package.json:1:27]
 1 │ {"name":"demo","keywords":[]}
   ·                           ──
   ╰────
  help: Remove empty package.json fields that do not carry any information.

  ⚠ oxc(package-json-no-empty-fields): The `keywords` field in package.json should not be an empty array.
   ╭─[/Users/alexeylyakhov/projects/oxc/crates/oxc_linter/fixtures/import/package.json:1:13]
 1 │ {"keywords":[],"name":"demo"}
   ·             ──
   ╰────
  help: Remove empty package.json fields that do not carry any information.
