crates/oxc_linter/src/snapshots/oxc_package_json_require_version.snap
---
source: crates/oxc_linter/src/tester.rs
assertion_line: 444
---

  ⚠ oxc(package-json-require-version): package.json should declare a `version` field.
   ╭─[/Users/alexeylyakhov/projects/oxc/crates/oxc_linter/fixtures/import/package.json:1:1]
 1 │ {"name":"demo"}
   · ─
   ╰────
  help: Add a package version such as `"version": "1.0.0"`.

  ⚠ oxc(package-json-require-version): package.json should declare a `version` field.
   ╭─[/Users/alexeylyakhov/projects/oxc/crates/oxc_linter/fixtures/import/package.json:1:1]
 1 │ {"type":"module"}
   · ─
   ╰────
  help: Add a package version such as `"version": "1.0.0"`.
