crates/oxc_linter/src/snapshots/oxc_package_json_valid_bin.snap
---
source: crates/oxc_linter/src/tester.rs
assertion_line: 444
---

  ⚠ oxc(package-json-valid-bin): The `bin` field in package.json is invalid.
   ╭─[/Users/alexeylyakhov/projects/oxc/crates/oxc_linter/fixtures/import/package.json:1:1]
 1 │ {"bin":""}
   · ─
   ╰────
  help: Use a non-empty string or an object whose values are non-empty strings.

  ⚠ oxc(package-json-valid-bin): The `bin` field in package.json is invalid.
   ╭─[/Users/alexeylyakhov/projects/oxc/crates/oxc_linter/fixtures/import/package.json:1:1]
 1 │ {"bin":{}}
   · ─
   ╰────
  help: Use a non-empty string or an object whose values are non-empty strings.

  ⚠ oxc(package-json-valid-bin): The `bin` field in package.json is invalid.
   ╭─[/Users/alexeylyakhov/projects/oxc/crates/oxc_linter/fixtures/import/package.json:1:1]
 1 │ {"bin":{"demo":""}}
   · ─
   ╰────
  help: Use a non-empty string or an object whose values are non-empty strings.

  ⚠ oxc(package-json-valid-bin): The `bin` field in package.json is invalid.
   ╭─[/Users/alexeylyakhov/projects/oxc/crates/oxc_linter/fixtures/import/package.json:1:1]
 1 │ {"bin":{"demo":1}}
   · ─
   ╰────
  help: Use a non-empty string or an object whose values are non-empty strings.

  ⚠ oxc(package-json-valid-bin): The `bin` field in package.json is invalid.
   ╭─[/Users/alexeylyakhov/projects/oxc/crates/oxc_linter/fixtures/import/package.json:1:1]
 1 │ {"bin":1}
   · ─
   ╰────
  help: Use a non-empty string or an object whose values are non-empty strings.
